crates/swc_css_parser/tests/errors/selector/attribute/invalid-modifier/output.stderr
error: Expected "]"
 --> $DIR/tests/errors/selector/attribute/invalid-modifier/input.css:1:14
  |
1 | [href="test" "z"] {}
  |              ^^^

